Calculated percent of missing values in flexdashboard

--- a/Muzammil-s-Flexboard.html
+++ b/Muzammil-s-Flexboard.html
@@ -1957,186 +1957,31 @@ window.FlexDashboardComponents.push({
 
 <div id="dashboard-container">
 
-<div id="column" class="section level2">
+<div class="knitr-options" data-fig-width="576" data-fig-height="460">
+
+</div>
+<div id="column" class="section level2" data-width="800">
 <h2>Column</h2>
-<div id="chart-a" class="section level3">
-<h3>Chart A</h3>
 </div>
-</div>
-<div id="import-data" class="section level1">
-<h1>Import data</h1>
+<div id="data-quality-issues" class="section level1">
+<h1>Data Quality Issues</h1>
+<div id="missing-values" class="section level3">
+<h3>Missing Values</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
+<pre><code>                                                                         missing_values_percent
+Do you understand that this is a paid course ?                                        5.6680162
+Course Fee Email                                                                      3.2388664
+Date sent                                                                             3.6437247
+Payment                                                                               2.8340081
+Payment Receipt Sent                                                                 89.4736842
+Which Country are you currently residing in?                                          0.4048583
+Which City are you currently residing in?                                             0.4048583
+Do you have a LinkedIn Account?                                                       0.4048583
+Do you have any feedback, thoughts, or comments you would like to share?             48.1781377</code></pre>
 </div>
-<div id="summary-of-data" class="section level1">
-<h1>Summary of Data</h1>
-<div class="knitr-options" data-fig-width="576" data-fig-height="460">
-
-</div>
-<pre><code>           Timestamp Student.ID Do.you.understand.that.this.is.a.paid.course..
-1 8/25/2022 14:35:19          1                                            Yes
-2  8/22/2022 5:25:04          2                                             No
-3  8/22/2022 5:26:34          3                                             No
-4  8/22/2022 5:27:38          4                                             No
-5  8/22/2022 5:31:42          5                                            Yes
-6  8/22/2022 5:32:14          6                                             No
-  Course.Fee.Email  Date.sent Payment Payment.Receipt.Sent
-1             Sent 2022-08-26    Paid                  Yes
-2             Sent 2022-08-23 Pending                     
-3             Sent 2022-08-23 Pending                     
-4             Sent 2022-08-23 Pending                     
-5             Sent 2022-08-23   Maybe                     
-6             Sent 2022-08-23 Pending                     
-  How.and.where.did.you.hear.about.this.course.
-1                              Through a friend
-2                                        Friend
-3                                WhatsApp group
-4                                Whatsapp group
-5                            Through a collegue
-6                                WhatsApp group
-  Which.Country.are.you.currently.residing.in.
-1                                     Pakistan
-2                                     Pakistan
-3                                     Pakistan
-4                                     Pakistan
-5                                     Pakistan
-6                                     Pakistan
-  Which.City.are.you.currently.residing.in. Gender Age
-1                                   Karachi   Male  23
-2                                   Karachi Female  32
-3                                    Lahore   Male  22
-4                                  Peshawar   Male  22
-5                                   Karachi   Male  23
-6                                   Karachi   Male  23
-  Are.you.currently.attending.University...College.
-1                                                No
-2                                                No
-3                                                No
-4                                               Yes
-5                                               Yes
-6                                               Yes
-  Latest.Degree.Completed.or.in.Progress.
-1                               Bachelors
-2                                 Masters
-3                                 Masters
-4                               Bachelors
-5                               Bachelors
-6                               Bachelors
-  Name.of.University.or.College.currently.or.previously.attended.
-1                                          University of Illinois
-2                                                  Ned university
-3                           Univeristy of agriculture, Faislabad 
-4           Institute of Management Sciences Peshawar (IMScieces)
-5                            Institute of Business Administration
-6                            Institute of Business Administration
-                                Discipline.of.Degree.
-1 Bachelor of science in marketing and data analytics
-2                                                M.E.
-3                                                 Msc
-4                                Software Engineering
-5                                    Computer Science
-6                                    Computer Science
-  Have.you.taken.any.foundational.course.in.data.science...econometrics...statistics...computer.science.
-1                                                                                           Data Science
-2                                                                                           Data Science
-3                                                                                           None of them
-4                                                                                            All of them
-5                                                                                       Computer Science
-6                                                                                       Computer Science
-  What.programming.language.s..are.you.most.comfortable.in..R..Python..Java..JS..etc....If.none.please.type..None...
-1          Have taken a course in R but not so comfortable. I have just gone through python and find it more doable.
-2                                                                                                             Python
-3                                                                                                             Python
-4                                                                                                         R, paython
-5                                                                                                               Java
-6                                                                                                   Java, Python, JS
-  Prior.Work.Experience.in.Data.Science.or.Machine.Learning
-1                                        Beginner (0 Years)
-2                                        Beginner (0 Years)
-3                                        Beginner (0 Years)
-4                                  Learner (1 Year or Less)
-5                                  Learner (1 Year or Less)
-6                                  Learner (1 Year or Less)
-                                                                                                                                                                                                                                                                                                                                                                                Primary.Reason.for.taking.this.course.
-1 I did my major in marketing and due to my extensive interest in the field of analytics I did my minor in data analytics. The courses I took in minor helped me explore my hidden interest for analytics and data visualisation. I really love playing with the data and keenly interested in having a strong hold in this field. Hence, I believe it sounds like a great opportunity to scale my passion and career 
-2                                                                                                                                                                                                                                                                                                                                                                                                            Knowledge
-3                                                                                                                                                                                                                                                                                                                                                                                                             Learning
-4                                                                                                                                                                                                                                                                       I&#39;m planning to get my Mastet degree in Data Science so this will help me out in that and will get some knowledge and learn new things as well
-5                                                                                                                                                                                                                                                                               I am really interested in R, python and statistics. I wanted to learn and polish these tools to enhance my Data Science capabilities. 
-6                                                                                                                                                                                                                                                                                                                                                                                              Learning and experience
-  Do.you.understand.that.this.is.a.paid.course...1
-1                                              Yes
-2                                               No
-3                                               No
-4                                               No
-5                                              Yes
-6                                               No
-  Prior.Formal.Education..course.teaching.or.using.R..university.assignments..coding.projects..course.work..etc...in.R.
-1                                                                                              Learner (1 Year or Less)
-2                                                                                                    Beginner (0 Years)
-3                                                                                              Learner (1 Year or Less)
-4                                                                                                    Beginner (0 Years)
-5                                                                                                    Beginner (0 Years)
-6                                                                                                    Beginner (0 Years)
-  Prior.Formal.Education..course.teaching.or.using.Python..university.assignments..coding.projects..course.work..etc...in.Python.
-1                                                                                                              Beginner (0 Years)
-2                                                                                                        Learner (1 Year or Less)
-3                                                                                                        Learner (1 Year or Less)
-4                                                                                                              Beginner (0 Years)
-5                                                                                                        Intermediate (2-3 Years)
-6                                                                                                        Learner (1 Year or Less)
-  Prior.Work.Experience.in.R. Prior.Work.Experience.in.Python.
-1              None (0 Years)                   None (0 Years)
-2              None (0 Years)            Some (1 Year or Less)
-3       Some (1 Year or Less)            Some (1 Year or Less)
-4              None (0 Years)            Some (1 Year or Less)
-5              None (0 Years)                   None (0 Years)
-6              None (0 Years)                   None (0 Years)
-  Personal.Education.or.Knowledge..learning.R.on.your.own.and.or.doing.personal.projects..etc...in.R.
-1                                                                            Learner (1 Year or Less)
-2                                                                                  Beginner (0 Years)
-3                                                                            Learner (1 Year or Less)
-4                                                                                  Beginner (0 Years)
-5                                                                                  Beginner (0 Years)
-6                                                                                  Beginner (0 Years)
-  Personal.Education.or.Knowledge..learning.Python.on.your.own.and.or.doing.personal.projects..etc...in.Python.
-1                                                                                            Beginner (0 Years)
-2                                                                                      Learner (1 Year or Less)
-3                                                                                      Learner (1 Year or Less)
-4                                                                                            Beginner (0 Years)
-5                                                                                      Intermediate (2-3 Years)
-6                                                                                      Learner (1 Year or Less)
-  Do.you.have.a.LinkedIn.Account.
-1                            True
-2                            None
-3                            True
-4                            True
-5                            True
-6                            True
-  Do.you.have.any.feedback..thoughts..or.comments.you.would.like.to.share.
-1                                                                         
-2                                                                         
-3                                                                     Good
-4                                                              No comments
-5   Looking forward learning with you. It&#39;s an amazing opportunity for me.
-6                                                                         </code></pre>
 <div id="column-1" class="section level2">
-<h2>Column</h2>
-<div id="chart-b" class="section level3">
-<h3>Chart B</h3>
-<div class="knitr-options" data-fig-width="576" data-fig-height="460">
-
-</div>
-</div>
-<div id="chart-c" class="section level3">
-<h3>Chart C</h3>
-<div class="knitr-options" data-fig-width="576" data-fig-height="460">
-
-</div>
-</div>
-</div>
-<div id="column-2" class="section level2">
 <h2>Column</h2>
 </div>
 </div>
